# enterprise-talk-to-data-blueprint

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE.md  Makefile  README.md  mlflow.db  pyproject.toml  requirements.txt
docs/: README.md  master.md
docs/annexes/: phase_1_framing_annexes.md  phase_2_data_semantic_readiness_annexes.md  phase_3_governed_data_foundation_annexes.md  phase_4_design_architecture_annexes.md  phase_5_prototype_mvp_build_annexes.md  phase_6_validation_assurance_remediation_annexes.md  phase_7_controlled_pilot_annexes.md  phase_8_production_readiness_annexes.md  phase_9_operate_adopt_improve_annexes.md
docs/phases/: phase_1_framing.md  phase_2_data_semantic_readiness.md  phase_3_governed_data_foundation.md  phase_4_design_architecture.md  phase_5_prototype_mvp_build.md  phase_6_validation_assurance_remediation.md  phase_7_controlled_pilot.md  phase_8_production_readiness.md  phase_9_operate_adopt_improve.md
evaluation_results/: eval_2026-06-19_v1.json  eval_2026-06-19_v2.json  eval_2026-06-19_v3.json  eval_2026-06-23_v11.json  eval_2026-06-23_v12.json  eval_2026-06-23_v12_full.json  eval_2026-06-23_v13_full.json  eval_2026-06-23_v4.json  eval_2026-06-23_v5.json  eval_2026-06-23_v9.json  eval_2026-06-24_v16_fast.json
src/: .gitignore  Makefile  PRODUCTION_PRACTICES.md  README.md  TECH_STACK.md  mlflow.db  requirements.txt  test_endpoints.py
src/backend/: evaluation_runner.py  main.py
src/evaluation_results/: eval_2026-06-30_full.json
src/evidence/: README.md  (+10 more)
templates/: README.md
(+112 files in other folders)
