[tool.poetry]
name = "enterprise-talk-to-data"
version = "0.1.0"
description = "Talk-to-data backend for newspaper analytics"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openai = ">=1.30"
azure-identity = ">=1.16"
pyodbc = ">=5.1"
sqlalchemy = ">=2.0"
python-dotenv = ">=1.0"
pandas = ">=2.2"
pyyaml = ">=6.0"
fastapi = ">=0.120.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
requests = ">=2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.21.0"
ruff = ">=0.5"
black = ">=24.0.0"
httpx = ">=0.27"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/backend/tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
